2007-03-01  Sven Schuetz

	* instance.c, providerRegister.c, interopProvider.c, queryStatement.c:
	Fixed 1668852: memory leak in interop provider

2007-02-27  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* Makefile.am: 
	Post-Fix for 1665255: added objectpath.h to source file list.

2007-02-26  Sven Schuetz

	* providerDrv.c, providerRegister.c, providerRegister.h:
	Fixed 1664992: interopProvider segfaults with provider-grouping
	
	* providerRegister.c:
	Fixed 1669192: new providerregistration causes problems

2007-02-22  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* providerDrv.c: 
	Fixed 1666311: Added support for old-style indication providers.

2007-02-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* support.c: 
	Fixed 1666258: Memory corruption in thread cleanup fixed.
	The memUnlinkEncObj function is skipping the actual unlinking step
	if the thread specific data containing the managed_thread structure
	could not be found - in which case unlinking wouldn't make much
	sense either. 

	* configure.ac, README, sfcb.cfg.pre.in:
	Amended 1660634: added README section and enhanced config defaults.
	
2007-02-22  Sven Schuetz

	* internalProvider.c, objectpath.c, Makefile.am, brokerUpc.c,
	fileRepository.h, interopProvider.c, fileRepository.c,
	objectpath.h:
	Fixed 1665255: providergrouping may fail
	Separated InteropProvider and InternalProvider - no more linking
	necessary

2007-02-21  Tyrel Datwyler <tyreld@us.ibm.com>

	* providerDrv.c
	Fixed 1653919: sfcb provider process doesn't die if dlopen fails

2007-02-20  Sven Schuetz

	* queryOperation.c, array.c, value.c:
	Fixed 1663390: problem with where clause in indicationfilter
	
	* README, default.reg, interopProvider.c, providerMgr.c:
	Fixed 1664273: creating a subscription can fail
	
	* brokerUpc.c:
	Fixed 1664453: indications are delivered unfiltered

2007-02-15  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>
